--- a/besavager/SConscript
+++ b/besavager/SConscript
@@ -8,6 +8,10 @@ srcs = Glob('*.cpp')
 libs = ['be']
 lib_path = os.getenv('LIBRARY_PATH').split(':')
 inc_path = os.getenv('BEINCLUDES').split(';')+['../']
+dst_path = '/boot/system/lib/besavager'
 
-env.SharedLibrary(target=dst, source=srcs, LIBS=libs, LIBPATH=lib_path, CPPPATH=inc_path)
-env.StaticLibrary(target=dst, source=srcs, LIBS=libs, LIBPATH=lib_path, CPPPATH=inc_path)
+dst_shared = env.SharedLibrary(target=dst, source=srcs, LIBS=libs, LIBPATH=lib_path, CPPPATH=inc_path)
+dst_static = env.StaticLibrary(target=dst, source=srcs, LIBS=libs, LIBPATH=lib_path, CPPPATH=inc_path)
+
+env.Install(dst_path, dst_shared);
+env.Install(dst_path, dst_static);
