--- a/src/SConscript
+++ b/src/SConscript
@@ -1,14 +1,13 @@
 import os
 
-dst = 'BeCJK'
-dst_name = '/boot/system/add-ons/input_server/methods/BeCJK'
+Import('env')
 
-srcs = Glob('*.cpp')
+dst = 'BeCJK'
+
+srcs = env.Glob('*.cpp')
 libs = ['be', 'besavager']
 lib_path = os.getenv('LIBRARY_PATH').split(':') + ['../besavager']
 inc_path = os.getenv('BEINCLUDES').split(';')+['../']
 
-env = Environment()
 dst_shared = env.SharedLibrary(target=dst, source=srcs, LIBS=libs, LIBPATH=lib_path, CPPPATH=inc_path)
-
-env.InstallAs(dst_name, dst_shared);
+Return("dst_shared")
